--- a/.github/workflows/on_dispatch_publish_package.yml
+++ b/.github/workflows/on_dispatch_publish_package.yml
@@ -5,6 +5,8 @@ on: workflow_dispatch
 jobs:
   build-package:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: action/checkout@v4
       - uses: action/setup-python@v5
@@ -15,6 +17,8 @@ jobs:
   publish-pypi:
     runs-on: ubuntu-latest
     environment: release
+    needs:
+      - build-package
     permissions:
       id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
