--- a/.github/workflows/on_dispatch_publish_package.yml
+++ b/.github/workflows/on_dispatch_publish_package.yml
@@ -5,6 +5,7 @@ on: workflow_dispatch
 jobs:
   build-package:
     runs-on: ubuntu-latest
+    environment: build
     permissions:
       contents: read
     steps:
