--- a/.github/workflows/on_dispatch_publish_package.yml
+++ b/.github/workflows/on_dispatch_publish_package.yml
@@ -3,31 +3,16 @@ name: On dispatch, publish package to PyPi.
 on: workflow_dispatch
 
 jobs:
-  build-package:
+  publish-pypi:
     runs-on: ubuntu-latest
-    environment: build
     permissions:
-      contents: read
+      id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-      - uses: action/checkout@v4
-      - uses: action/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.11
       - run: pip install --user poetry
       - run: poetry build
-  publish-pypi:
-    runs-on: ubuntu-latest
-    environment: release
-    needs:
-      - build-package
-    permissions:
-      id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
-    steps:
-      #- uses: actions/checkout@v4
-      #- uses: actions/setup-python@v5
-      #  with:
-      #    python-version: 3.11
-      #- run: pip install --user poetry
-      #- run: poetry build
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
