--- a/.github/workflows/on_push_doctest.yml
+++ b/.github/workflows/on_push_doctest.yml
@@ -19,6 +19,8 @@ jobs:
       ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
