--- a/.github/workflows/on_dispatch_publish_package.yml
+++ b/.github/workflows/on_dispatch_publish_package.yml
@@ -9,6 +9,8 @@ jobs:
       id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-python@v5
         with:
           python-version: 3.11
