--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,21 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.11.*"       # python 3.12 mangler distutils, som ødelegger installasjon av pendulum 2.1.2
                         # derfor låser vi oss til python 3.11
-requests = "2.31.0"
+requests = "2.32.2"
 pendulum = "3.0.0"      # fjernet airflow/dataverk i dev fordi den bruker en eldgammel versjon av pendulum
 ijson = "3.2.3"
-oracledb = "2.1.2"      # versjonen her begrenses av dbt-oracle, så dbt-oracle må oppgraderes først
-dbt-oracle = "1.7.4"    # denne krever cx_Oracle 8.3, som vi ikke klarer å bygge uten gcc
+oracledb = "2.2.0"      # versjonen her begrenses av dbt-oracle, så dbt-oracle må oppgraderes først
+dbt-oracle = "1.7.5"    # denne krever cx_Oracle 8.3, som vi ikke klarer å bygge uten gcc
                         # 3.11-slim har ikke gcc, men 3.11 har det, men den er +700 MB..
-google-cloud-secret-manager = "2.19.0"
-confluent-kafka = "2.3.0"
+google-cloud-secret-manager = "2.20.0"
+confluent-kafka = "2.4.0"
 fastavro = "1.9.4"
 
 [tool.poetry.group.dev.dependencies]
-black = "24.2.0"
-mypy = "1.8.0"
-pylint = "3.0.3"
-pytest = "8.0.1"
+black = "*"
+mypy = "*"
+pylint = "*"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core"]
