--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ oracledb = "2.5.1"      # versjonen her begrenses av dbt-oracle, så dbt-oracle 
 dbt-oracle = "1.8.4"    # denne krever cx_Oracle 8.3, som vi ikke klarer å bygge uten gcc
                         # 3.11-slim har ikke gcc, men 3.11 har det, men den er +700 MB..
 google-cloud-secret-manager = "2.22.0"
-confluent-kafka = "2.8.0"
+confluent-kafka = { version = "2.8.0", extras = ["avro", "json", "schemaregistry"]} 
 fastavro = "1.10.0"
 google-cloud-bigquery = "3.27.0"
 
