--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ black = "*"
 mypy = "*"
 pylint = "*"
 pytest = "*"
-testcontainers = {version = "*", extras = ["oracledb"] }
+testcontainers = {version = "*", extras = ["oracledb", "kafka"] }
 
 [build-system]
 requires = ["poetry-core"]
