--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ build-backend = "poetry.core.masonry.api"
 # aliasing = "explicit"
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules --ignore=examples --ignore=tests"
+addopts = "--doctest-modules --ignore=examples --ignore=tests/wip"
 
 [tool.mypy]
 files = "dwh_oppfolging"
