--- a/.github/workflows/on_dispatch_publish_package.yml
+++ b/.github/workflows/on_dispatch_publish_package.yml
@@ -17,4 +17,4 @@ jobs:
       - run: pip install --user poetry
       - run: poetry build
       - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc #release/v1
