--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ google-cloud-secret-manager = "2.24.0"
 confluent-kafka = { version = "2.11.0", extras = ["avro", "json", "schemaregistry"]} 
 fastavro = "1.12.0"
 google-cloud-bigquery = "3.35.1"
+pydantic = "2.11.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
