--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ confluent-kafka = { version = "2.11.0", extras = ["avro", "json", "schemaregistr
 fastavro = "1.12.0"
 google-cloud-bigquery = "3.35.1"
 pydantic = "2.11.7"
+plotly = "6.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
